--- a/1st.HTML
+++ b/1st.HTML
@@ -1,6 +1,13 @@
 <DOCTYPE html>
 <html>
 <head>
+<style>
+ body {
+            background-image:url(https://images.ctfassets.net/hrltx12pl8hq/2RwJp3f9UiCnfWBEunwxOQ/f11257994853124d7b1a6a935e678c13/0_hero.webp?fit=fill&w=600&h=400);
+            background-repeat: no-repeat;
+            background-size: cover;
+}
+</style>
 <title> Dreams </title>
 </head>
 <body><center>
