--- a/2nd.HTML
+++ b/2nd.HTML
@@ -7,6 +7,9 @@
             background-repeat: no-repeat;
             background-size: cover;
 }
+  p{ 
+   text-color: white;
+}
 </style>
 <title> Plight </title>
 </head>
