--- a/3rd.HTML
+++ b/3rd.HTML
@@ -1,6 +1,14 @@
 <DOCTYPE html>
 <html>
 <head>
+<style>
+ body {
+            background-image:url(https://cdn.photoroom.com/v2/image-cache?path=gs://background-7ef44.appspot.com/backgrounds_v3/white/29_-_white.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
+}
+ 
+</style>
 <title> Humming Birds </title>
 </head>
 <body><center>
