--- a/1stcmsong.HTML
+++ b/1stcmsong.HTML
@@ -1,6 +1,10 @@
 <DOCTYPE html>
 <html>
 <head>
+body {
+            background-image:url(https://png.pngtree.com/background/20230617/original/pngtree-minimal-white-christmas-background-rendered-in-3d-picture-image_3697639.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
 <title> Santa Claus Is Coming To Town </title>
 </head>
 <body>
