--- a/3rdsong.HTML
+++ b/3rdsong.HTML
@@ -1,6 +1,13 @@
 <DOCTYPE html>
 <html>
 <head>
+<style>
+body {
+            background-image:url(https://png.pngtree.com/background/20230617/original/pngtree-minimal-white-christmas-background-rendered-in-3d-picture-image_3697639.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
+}
+</style>
 <title> Joy to the World </title>
 </head>
 <body>
